# gist

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Features.md  GistFormat.json  README.md  TestFile.json  config.toml  configure.sh  gists.py  run.sh
app/: CMakeLists.txt  cli.c  gist-bin.cpp
cmake/: Color.cmake  Debian.cmake  argparse.cmake  doctest.cmake  fmt.cmake  json.cmake  restclient-cpp.cmake  tomlplusplus.cmake
include/: Version.h.in  cli.h  gist.h  gist_def.h
include/util/: Data.h  Str.h
include/utility/: Api.h  Data.h  Str.h
resources/: CMakeLists.txt
resources/samples/: gists.p1.json
scripts/: configure.sh  run.sh  test_gist.sh
src/: Api.cpp  CMakeLists.txt  Data.cpp  Gist.cpp  Str.cpp  gist.cpp
subprojects/: utility
test/: CMakeLists.txt  test_gist.cpp
tests/resources/: TestFile2.json
